# product_store_ai_assistants-beta-

./: .gitignore  clean_files.py  mixins.py  pyproject.toml  seeds.py
backend_ia/: admin.py  apps.py
backend_ia/api/: serializers.py  urls.py  views.py
backend_ia/assistants/: content_marketing_assistnat.py  customer_support_assistant.py  product_manager_assistant.py
backend_ia/assistants/prompts/: content_marketing_prompt.txt  customer_support_prompt.txt  product_manager_prompt.txt  prompt_loader.py
backend_ia/core/: database.py  langchain_setup.py
backend_ia/migrations/: 0001_initial.py
backend_ia/models/: faq.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
chroma_db/: chroma.sqlite3
chromadb_data/: chroma.sqlite3
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
productorders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
productorders/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
stock/: admin.py  models.py  serializers.py  urls.py  views.py
stock/migrations/: 0001_initial.py
store/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
